--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "phase_4_mock_challenge_camping_fun-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5555",
+  "proxy": "http://127.0.0.1:5555",
   "dependencies": {
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
